crates/openehr-serde/tests/snapshots/full_rm_canonical_json__URI.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "URI",
  "value": "http://example.org/resource"
}
