crates/openehr-serde/tests/snapshots/full_rm_canonical_json__VALIDITY_KIND.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "VALIDITY_KIND",
  "value": "mandatory"
}
