crates/openehr-serde/tests/snapshots/full_rm_canonical_json__VERSIONED_OBJECT.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "VERSIONED_OBJECT",
  "uid": {
    "_type": "HIER_OBJECT_ID",
    "value": "939cec48-d629-4a3f-89f1-28c573387680"
  },
  "owner_id": {
    "_type": "OBJECT_REF",
    "namespace": "local",
    "type": "EHR",
    "id": {
      "_type": "HIER_OBJECT_ID",
      "value": "7d44b88c-4199-4bad-97dc-d78268e01398"
    }
  },
  "time_created": {
    "_type": "DV_DATE_TIME",
    "value": "2026-07-02T10:00:00Z"
  }
}
