crates/openehr-serde/tests/snapshots/full_rm_canonical_json__VERSION_STATUS.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "VERSION_STATUS",
  "value": "released"
}
