crates/openehr-serde/tests/snapshots/full_rm_canonical_json__VERSION_TREE_ID.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "VERSION_TREE_ID",
  "value": "1.2.1"
}
