crates/openehr-serde/tests/snapshots/full_rm_canonical_json__X_VERSIONED_COMPOSITION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "X_VERSIONED_COMPOSITION",
  "uid": {
    "_type": "HIER_OBJECT_ID",
    "value": "7a8f2d05-69a4-4ce4-8d58-69d330b6f605"
  },
  "owner_id": {
    "_type": "OBJECT_REF",
    "namespace": "local",
    "type": "EHR",
    "id": {
      "_type": "HIER_OBJECT_ID",
      "value": "c7a4f272-bf28-4145-9da5-a2e7e6c7d9fe"
    }
  },
  "time_created": {
    "_type": "DV_DATE_TIME",
    "value": "2026-07-02T10:00:00Z"
  },
  "total_version_count": 1,
  "extract_version_count": 1
}
